jilles      2005/12/18 02:27:50 UTC	(20051218-4163)
  Log:
  - Remove any data from the previous connection on reconnect
  - Improve handling of connection errors somewhat (still not great)
  
  Tracker #86
  

  Changes:	Modified:
  +21 -4	trunk/src/packet.c (File Modified) 


jilles      2005/12/18 01:50:04 UTC	(20051218-4161)
  Log:
  flags: mention <self> -* to remove own access
  xop: add some text about required privileges
  

  Changes:	Modified:
  +3 -0		trunk/help/cservice/flags (File Modified) 
  +4 -0		trunk/help/cservice/xop (File Modified) 


jilles      2005/12/18 01:43:55 UTC	(20051218-4159)
  Log:
  Allow users to remove their own access in /cs flags and .flags.
  Only works with -* and if they're not akicked (+b).
  

  Changes:	Modified:
  +32 -20	trunk/modules/chanserv/flags.c (File Modified) 


jilles      2005/12/18 00:46:59 UTC	(20051218-4157)
  Log:
  Add wallchops() stuff to some protocol modules.
  

  Changes:	Modified:
  +6 -0		trunk/protocol/asuka.c (File Modified) 
  +6 -0		trunk/protocol/bahamut.c (File Modified) 
  +6 -0		trunk/protocol/bircd.c (File Modified) 
  +10 -0	trunk/protocol/charybdis.c (File Modified) 
  +11 -0	trunk/protocol/hyperion.c (File Modified) 
  +1 -0		trunk/protocol/ircnet.c (File Modified) 
  +11 -0	trunk/protocol/plexus.c (File Modified) 
  +10 -0	trunk/protocol/ratbox.c (File Modified) 
  +10 -0	trunk/protocol/shadowircd.c (File Modified) 
  +6 -0		trunk/protocol/undernet.c (File Modified) 


jilles      2005/12/17 23:34:18 UTC	(20051217-4155)
  Log:
  Make generic_wallchops() send an individual notice to each
  channel operator.
  

  Changes:	Modified:
  +3 -1		trunk/include/phandler.h (File Modified) 
  +10 -1	trunk/src/phandler.c (File Modified) 


jilles      2005/12/17 23:13:00 UTC	(20051217-4153)
  Log:
  Argh, more CRLF line terminators.
  

  Changes:	Modified:
  +175 -175	trunk/src/phandler.c (File Modified) 


jilles      2005/12/17 23:11:59 UTC	(20051217-4151)
  Log: